--- a/w1_NodeJS/package.json
+++ b/w1_NodeJS/package.json
@@ -12,7 +12,8 @@
   "author": "laoxie",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "http-proxy-middleware": "^0.19.1"
   },
   "devDependencies": {
     "gulp": "^4.0.2"
