day2-1p webSocket 多人聊天室

--- a/w1_NodeJS/package.json
+++ b/w1_NodeJS/package.json
@@ -15,7 +15,8 @@
     "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
     "http-proxy-middleware": "^0.19.1",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "ws": "^7.1.2"
   },
   "devDependencies": {
     "gulp": "^4.0.2"
