--- a/w3_VueRouter/myproject/package.json
+++ b/w3_VueRouter/myproject/package.json
@@ -6,10 +6,11 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "start":"npm run serve"
+    "start": "npm run serve"
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "element-ui": "^2.11.1",
     "vue": "^2.6.10"
   },
   "devDependencies": {
