--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
 ﻿#过滤文件夹
 node_modules/
-w3_VueRouter/myproject/src/assets/img/
 
 #过滤文件
-.zip
-.rar
-.mp3
-.mp4
-.apk
-.ipa
+*.zip
+*.rar
+*.mp3
+*.mp4
+*.apk
+*.ipa
+*.avi
+*.rmvb
