--- a/w1_MongoDB/package.json
+++ b/w1_MongoDB/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.3.0",
     "mysql": "^2.17.1"
   }
