--- a/w1_MongoDB/package.json
+++ b/w1_MongoDB/package.json
@@ -10,6 +10,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.3.0",
+    "multer": "^1.4.2",
     "mysql": "^2.17.1"
   }
 }
