day5-1p React组件 组件通讯

--- a/w5_React/package.json
+++ b/w5_React/package.json
@@ -9,18 +9,23 @@
   "dependencies": {
     "babel-loader": "^8.0.6",
     "html-webpack-plugin": "^3.2.0",
-    "react-dom": "^16.9.0",
     "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "webpack": "^4.39.3",
     "webpack-cli": "^3.3.8",
-    "webpack-dev-server": "^3.8.0",
-    "webpack": "^4.39.3"
+    "webpack-dev-server": "^3.8.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@babel/core": "^7.6.0",
+    "@babel/preset-react": "^7.0.0",
+    "css-loader": "^3.2.0",
+    "style-loader": "^1.0.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev" :"webpack-dev-server",
-    "build":"webpack",
-    "start" :"npm run dev"
+    "dev": "webpack-dev-server",
+    "build": "webpack",
+    "start": "npm run dev"
   },
   "author": "laoxie",
   "license": "ISC"
