--- a/w5_React/package.json
+++ b/w5_React/package.json
@@ -7,6 +7,7 @@
     "doc": "doc"
   },
   "dependencies": {
+    "antd": "^3.23.2",
     "babel-loader": "^8.0.6",
     "html-webpack-plugin": "^3.2.0",
     "react": "^16.9.0",
@@ -18,6 +19,7 @@
   "devDependencies": {
     "@babel/core": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
+    "babel-plugin-import": "^1.12.1",
     "css-loader": "^3.2.0",
     "style-loader": "^1.0.0"
   },
