--- a/w5_React/package.json
+++ b/w5_React/package.json
@@ -21,6 +21,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-plugin-import": "^1.12.1",
     "css-loader": "^3.2.0",
+    "prop-types": "^15.7.2",
     "style-loader": "^1.0.0"
   },
   "scripts": {
