--- a/w5_ReactRouter/package.json
+++ b/w5_ReactRouter/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-import": "^1.12.1",
