--- a/w6_Redux/package.json
+++ b/w6_Redux/package.json
@@ -16,11 +16,13 @@
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-proposal-decorators": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
+    "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-import": "^1.12.1",
     "css-loader": "^3.2.0",
     "html-webpack-plugin": "^3.2.0",
     "prop-types": "^15.7.2",
+    "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.4",
     "style-loader": "^1.0.0",
