--- a/w6_Redux/package.json
+++ b/w6_Redux/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "antd": "^3.23.2",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "sass-loader": "^8.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
@@ -21,6 +22,7 @@
     "babel-plugin-import": "^1.12.1",
     "css-loader": "^3.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
