--- a/w6_Redux/package.json
+++ b/w6_Redux/package.json
@@ -20,7 +20,9 @@
     "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-import": "^1.12.1",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
+    "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
@@ -30,6 +32,7 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.1",
     "style-loader": "^1.0.0",
+    "url-loader": "^2.1.0",
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.8",
     "webpack-dev-server": "^3.8.0"
