--- a/w7_ReactNative/myrn/android/gradle.properties
+++ b/w7_ReactNative/myrn/android/gradle.properties
@@ -19,3 +19,8 @@
 
 android.useAndroidX=true
 android.enableJetifier=true
+
+MYAPP_RELEASE_STORE_FILE=laoxie.keystore
+MYAPP_RELEASE_KEY_ALIAS=xiaoxie
+MYAPP_RELEASE_STORE_PASSWORD=123456
+MYAPP_RELEASE_KEY_PASSWORD=123456
