--- a/w8_Wechat/myapp/app.json
+++ b/w8_Wechat/myapp/app.json
@@ -1,28 +1,33 @@
 {
   "pages": [
+    "pages/list/list",
     "pages/index/index",
-    "pages/logs/logs"
+    "pages/logs/logs",
+    "pages/home/home"
   ],
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#58bc58",
     "navigationBarTitleText": "千锋h5_1906",
     "navigationBarTextStyle": "white",
-    "backgroundColor":"#fc0",
-    "enablePullDownRefresh":true
+    "backgroundColor": "#fc0",
+    "enablePullDownRefresh": true
   },
-  "tabBar":{
-    "backgroundColor":"#58bc58",
-    "color":"#fff",
-    "selectedColor":"#ff0",
-    "position":"top",
-    "list":[{
-      "pagePath":"pages/index/index",
-      "text":"首页"
-    },{
-      "pagePath": "pages/logs/logs",
-      "text": "日志"
-    }]
+  "tabBar": {
+    "backgroundColor": "#58bc58",
+    "color": "#fff",
+    "selectedColor": "#ff0",
+    "position": "top",
+    "list": [
+      {
+        "pagePath": "pages/index/index",
+        "text": "首页"
+      },
+      {
+        "pagePath": "pages/list/list",
+        "text": "列表"
+      }
+    ]
   },
   "sitemapLocation": "sitemap.json"
 }
